--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,9 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">Inicio</a>
+		<a href="/about">Sobre mi</a>
 		<h1>Astro</h1>
+		<h1>Mi sitio en astro</h1>
 	</body>
 </html>
