--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,9 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import '../styles/global.css'
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+
 const pageTitle = "Sobre mi";
 
 const identity = {
@@ -11,6 +16,10 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro"]
 const happy = false;
 const finished = false;
 const goal = 3;
+
+const skillColor = "#000F08";
+const fontWeight = "bolder";
+const textCase =  "uppercase";
 ---
 
 <html lang="en">
@@ -20,11 +29,23 @@ const goal = 3;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+		<style define:vars={{skillColor, fontWeight, textCase}}>
+			body {
+				background-color: var(--skillColor);
+				color: #FB3640;
+			}
+			h1 {
+				color: #FB3640;
+				font-size: 4rem;
+			}
+			.skill {
+				font-weight: var(--fontWeight);
+				text-transform: var(--textCase);
+			}
+		</style>
 	</head>
 	<body>
-		<a href="/">Inicio</a>
-		<a href="/about">Sobre mi</a>
-		<a href="/blog">Blog</a>
+		<Header />
 		 <h1>{pageTitle}</h1>
             <h2>... ¡y mi nuevo sitio Astro!</h2>
 
@@ -43,7 +64,7 @@ const goal = 3;
 			</ul>
 			<p>Mis habilidades son:</p>
 			<ul>
-			{skills.map((skill) => <li>{skill}</li>)}
+			{skills.map((skill) => <li class="skill">{skill}</li>)}
 			</ul>
 
 			{happy && <p>¡Estoy feliz de aprender Astro!</p>}
@@ -51,5 +72,6 @@ const goal = 3;
 			{finished && <p>¡He terminado este tutorial!</p>}
 
 			{goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
+		<Footer />
 	</body>
 </html>
