--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,9 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import '../styles/global.css'
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+
 const nombre = "Kelrod";
 const pageTitle = "Mi Blog sobre mi aprendizaje en Astro"
 
@@ -13,9 +18,7 @@ const pageTitle = "Mi Blog sobre mi aprendizaje en Astro"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Inicio</a>
-		<a href="/about">Sobre mi</a>
-		<a href="/blog">Blog</a>
+		<Header />
 		<h1>{pageTitle}</h1>
 		<p>Este es el blog de {nombre}</p>
 		<ul>
@@ -25,5 +28,6 @@ const pageTitle = "Mi Blog sobre mi aprendizaje en Astro"
 				<a href="/posts/post-3">Publicacion 3</a>
 			</li>
 		</ul>
+		<Footer />
 	</body>
 </html>
