--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,9 @@
 ---
+import '../styles/global.css'
+import Navigation from '../components/Navigation.astro'
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+
 const pageTitle = "Pagina de Inicio"
 ---
 
@@ -11,9 +16,8 @@ const pageTitle = "Pagina de Inicio"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Inicio</a>
-		<a href="/about">Sobre mi</a>
-		<a href="/blog">Blog</a>
+		<Header />
 		<h1>{pageTitle}</h1>
+		<Footer />
 	</body>
 </html>
