--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -30,10 +30,7 @@ const textCase =  "uppercase";
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
 		<style define:vars={{skillColor, fontWeight, textCase}}>
-			body {
-				background-color: var(--skillColor);
-				color: #FB3640;
-			}
+			
 			h1 {
 				color: #FB3640;
 				font-size: 4rem;
@@ -73,5 +70,8 @@ const textCase =  "uppercase";
 
 			{goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
 		<Footer />
+		<script>
+			import '../scripts/menu.js'
+		</script>
 	</body>
 </html>
