--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,6 +3,7 @@ import Navigation from '../components/Navigation.astro';
 import '../styles/global.css'
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
+import BaseLayouts from '../layouts/BaseLayouts.astro';
 
 const pageTitle = "Sobre mi";
 
@@ -10,41 +11,16 @@ const identity = {
 	firstName: "Kelrod",
 	country: "Spain",
 	occupation: "Developer",
-	hobbies: ["Leer", "programar", "Jugar al tenis"],
+	hobbies: ["Leer", "programar", "jugar al tenis"],
 };
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro"]
 const happy = false;
 const finished = false;
 const goal = 3;
-
-const skillColor = "#000F08";
-const fontWeight = "bolder";
-const textCase =  "uppercase";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-		<style define:vars={{skillColor, fontWeight, textCase}}>
-			
-			h1 {
-				color: #FB3640;
-				font-size: 4rem;
-			}
-			.skill {
-				font-weight: var(--fontWeight);
-				text-transform: var(--textCase);
-			}
-		</style>
-	</head>
-	<body>
-		<Header />
-		 <h1>{pageTitle}</h1>
-            <h2>... ¡y mi nuevo sitio Astro!</h2>
+		<BaseLayouts pageTitle={pageTitle}>
+			<h2>... ¡y mi nuevo sitio Astro!</h2>
 
             <p>Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda página de mi sitio web, ¡y es la primera que he construido yo mismo!</p>
 
@@ -56,7 +32,7 @@ const textCase =  "uppercase";
 			<li>Me llamo {identity.firstName}.</li>
 			<li>Vivo en {identity.country} y trabajo como {identity.occupation}.</li>
 			{identity.hobbies.length >= 2 &&
-				<li>Dos de mis aficiones son: {identity.hobbies[0]} y {identity.hobbies[1]}</li>
+				<li>Dos de mis aficiones son: {identity.hobbies[0]} , {identity.hobbies[1]} y {identity.hobbies[2]}</li>
 			}
 			</ul>
 			<p>Mis habilidades son:</p>
@@ -69,9 +45,5 @@ const textCase =  "uppercase";
 			{finished && <p>¡He terminado este tutorial!</p>}
 
 			{goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
-		<Footer />
-		<script>
-			import '../scripts/menu.js'
-		</script>
-	</body>
+		</BaseLayouts>
 </html>
