--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,22 +3,12 @@ import Navigation from '../components/Navigation.astro';
 import '../styles/global.css'
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
+import BaseLayouts from '../layouts/baseLayouts.astro';
 
 const nombre = "Kelrod";
 const pageTitle = "Mi Blog sobre mi aprendizaje en Astro"
-
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<Header />
+	<BaseLayouts>
 		<h1>{pageTitle}</h1>
 		<p>Este es el blog de {nombre}</p>
 		<ul>
@@ -28,9 +18,7 @@ const pageTitle = "Mi Blog sobre mi aprendizaje en Astro"
 				<a href="/posts/post-3">Publicacion 3</a>
 			</li>
 		</ul>
-		<Footer />
-		<script>
-			import '../scripts/menu.js'
-		</script>
-	</body>
+	</BaseLayouts>
+		
+		
 </html>
