--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,26 +1,10 @@
 ---
 import '../styles/global.css'
-import Navigation from '../components/Navigation.astro'
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
+import BaseLayouts from '../layouts/baseLayouts.astro';
 
 const pageTitle = "Pagina de Inicio"
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<Header />
-		<h1>{pageTitle}</h1>
-		<Footer />
-		<script>
-			import '../scripts/menu.js'
-		</script>
-	</body>
-</html>
+<BaseLayouts pageTitle={pageTitle}>
+ <p>Mi subtitulo del blog</p>
+</BaseLayouts>
