--- a/src/layouts/MarkDownPostLayout.astro
+++ b/src/layouts/MarkDownPostLayout.astro
@@ -1,9 +1,13 @@
 ---
+import BaseLayouts from "./BaseLayouts.astro";
+
 const { frontmatter } = Astro.props;
+
 ---
-<h1>{frontmatter.title}</h1>
-<p>Escrito por {frontmatter.author}</p>
-<p>Publicado en: {frontmatter.pubDate.toString().slice(0,10)}</p>
-<p><em>Descripcion: {frontmatter.description}</em></p>
-<img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
-<slot />
+<BaseLayouts pageTitle={frontmatter.title}>
+    <p>Escrito por {frontmatter.author}</p>
+    <p>Publicado en: {frontmatter.pubDate.toString().slice(0,10)}</p>
+    <p><em>Descripcion: {frontmatter.description}</em></p>
+    <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+    <slot />  
+</BaseLayouts>
