--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css'
-import BaseLayouts from '../layouts/baseLayouts.astro';
+import BaseLayouts from '../layouts/BaseLayouts.astro';
 
 const pageTitle = "Pagina de Inicio"
 ---
