--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,22 +1,19 @@
 ---
-import Navigation from '../components/Navigation.astro';
 import '../styles/global.css'
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
-import BaseLayouts from '../layouts/baseLayouts.astro';
-
+import BaseLayouts from '../layouts/BaseLayouts.astro';
+import Blogpost from '../components/Blogpost.astro';
+const allPosts = await Astro.glob('../pages/posts/*.md');
 const nombre = "Kelrod";
 const pageTitle = "Mi Blog sobre mi aprendizaje en Astro"
+
+
+
 ---
 	<BaseLayouts>
 		<h1>{pageTitle}</h1>
 		<p>Este es el blog de {nombre}</p>
 		<ul>
-			<li>
-				<a href="/posts/post-1">Publicacion 1</a>
-				<a href="/posts/post-2">Publicacion 2</a>
-				<a href="/posts/post-3">Publicacion 3</a>
-			</li>
+			{allPosts.map((post) => <Blogpost postLink={post.url} postTitle={post.frontmatter.title} />)}
 		</ul>
 	</BaseLayouts>
 		
